# lms2012-compat

./: .gitattributes  CMakeLists.txt  README.md  release.sh
c_com/: CMakeLists.txt  c_bt.c  c_bt.h  c_com.c  c_com.h  c_daisy.c  c_daisy.h  c_i2c.c  c_md5.c  c_wifi.c  c_wifi.h  net.connman.xml  org.bluez.xml  org.freedesktop.systemd.xml  wpa_ctrl.c
c_com/Linuxlib_AM335x/: Makefile
c_com/source/: CMakeLists.txt  c_bt.c  c_com.c  c_daisy.h  c_i2c.c
c_dynload/: CMakeLists.txt  c_dynload.c
c_dynload/Linuxlib_AM335x/: Makefile
c_dynload/source/: CMakeLists.txt
c_input/: CMakeLists.txt  c_input.c  c_input.h
c_input/Linuxlib_AM335x/: Makefile
c_input/source/: CMakeLists.txt
c_memory/: CMakeLists.txt  c_memory.c  c_memory.h
c_memory/Linuxlib_AM335x/: Makefile
c_memory/source/: CMakeLists.txt  c_memory.c
c_output/: CMakeLists.txt  c_output.c  c_output.h
c_output/Linuxlib_AM335x/: Makefile
c_output/source/: CMakeLists.txt
c_robotcvm/: CMakeLists.txt  robotc.c
c_robotcvm/Linuxlib_AM335x/: Makefile
c_robotcvm/source/: CMakeLists.txt  robotc.c
c_sound/: CMakeLists.txt  c_sound.c  c_sound.h
c_sound/Linuxlib_AM335x/: Makefile
c_sound/source/: c_sound.c  c_sound.h
c_ui/: CMakeLists.txt  browser.c  browser.h  button.c  button.h  c_ui.c  c_ui.h  d_lcd.c  d_lcd.h  d_terminal.c  d_terminal.h  dialog.c  dialog.h  draw.c  draw.h  graph.c  graph.h  keyboard.c  keyboard.h  led.c  led.h  power.c  power.h  textbox.c  textbox.h
c_ui/Linuxlib_AM335x/: Makefile
c_ui/source/: CMakeLists.txt  c_ui.c
cmake/: gdbus.cmake
d_analog/Linuxmod_AM335x/: Makefile  d_analog.c  spi0_ch0.c  spi1_ch0.c  spi1_ch1.c
d_bt/Linuxmod_AM335x/: Makefile  d_bt.c
d_iic/Linuxmod_AM335x/: Makefile  d_iic.c
d_power/Linuxmod_AM335x/: Makefile  d_power.c
d_pwm/Linuxmod_AM335x/: Makefile  d_pwm.c
d_sound/Linuxmod_AM335x/: Makefile  d_sound.c
d_uart/Linuxmod_AM335x/: Makefile  d_uart.c
d_ui/Linuxmod_AM335x/: Makefile  d_ui.c  fatcatlab_178x24.c  logo_41x54.c  vol_char_16x30.c  vol_char_8x20.c
d_usbdev/: 3.12.0  initusb
d_usbdev/Linuxmod_AM335x/: Makefile  computil.c  d_usbdev.c  usb_function.c
d_usbhost/Linuxmod_AM335x/: Makefile  d_usbhost.c
data/: CMakeLists.txt
data/brick_program/: CMakeLists.txt
data/device_types/: CMakeLists.txt  typedata50.rcf
data/scripts/: CMakeLists.txt  install-to-working-directory.sh  usb-hid-gadget.sh
debian/: changelog  control  copyright  links  lms2012-compat.lms2012-compat-uart.udev  lms2012-compat.lms2012-compat-uart@.service  lms2012-compat.lms2012-compat-usb-hid-gadget.udev  lms2012-compat.lms2012-compat-usb-hid-gadget@.service  modprobe  postinst  postrm  rules
debian/source/: options
doc/: CMakeLists.txt  lms2012-compat.md
docker/: README.md  armel.dockerfile  armhf.dockerfile  setup.sh
lms2012/: CMakeLists.txt  am335x.h  bytecodes.c  bytecodes.h  bytecodes.h.in  c_branch.c  c_branch.h  c_compare.c  c_compare.h  c_math.c  c_math.h  c_move.c  c_move.h  c_timer.c  c_timer.h  lms2012.c  lms2012.h  lmstypes.h  validate.c  validate.c.in  validate.h
lms2012/Linux_AM335x/: Makefile
lms2012/Linux_AM335x/sys/: exit
lms2012/doc/: Doxyfile  Implementation  daisy.txt  devicedesign
lms2012/doc/graphics/: update
lms2012/source/: CMakeLists.txt
lmssrc/: CMakeLists.txt  raw2rsf.sh  rules.mk
lmssrc/Bluetooth/: Bluetooth.lms  CMakeLists.txt
lmssrc/Brick Datalog/: Brick Datalog.lms  CMakeLists.txt
lmssrc/Brick Info/: Brick Info.lms  CMakeLists.txt
lmssrc/Brick Name/: Brick Name.lms  CMakeLists.txt
lmssrc/Brick Program/: Brick Program.lms  CMakeLists.txt
lmssrc/Debug/: CMakeLists.txt  Debug.lms
lmssrc/Demo/: CMakeLists.txt  Demo.lms
lmssrc/IR Control/: CMakeLists.txt
lmssrc/Motor Control/: CMakeLists.txt
lmssrc/Port View/: CMakeLists.txt  Port View.lms
lmssrc/SelfTest/: CMakeLists.txt  Test0201.lms  TestPrg2.lms
lmssrc/Sleep/: CMakeLists.txt
lmssrc/TEST/: CMakeLists.txt  Change Name.lms  Debug.lms  Display.lms  Motors.lms  Performance.lms  Power.lms  SDCard.lms  Sensors.lms  Sound.lms  USlevel.lms  UnlockDatalog.lms
lmssrc/Test/: CMakeLists.txt  Test.lms
lmssrc/Volume/: CMakeLists.txt
lmssrc/WiFi/: CMakeLists.txt  WiFi.lms
lmssrc/adk/: apps.c
lmssrc/adk/cnvlog/: cnvlog.c
lmssrc/adk/lmsasm/DebugBytecodePrograms/: readme.txt
lmssrc/adk/lmststasm/: bytecodeassembler.c
lmssrc/adk/lmststasm/DebugBytecodePrograms/: readme.txt
lmssrc/c_ui/: CMakeLists.txt
lmssrc/tst/: CMakeLists.txt  Performance.lms  tst.lms  tst_save.lms  tstmath.lms  tststr.lms
lmssrc/ui/: CMakeLists.txt  ui.lms
open_first/: Makefile  lego.config  rules.mk
